# telegram-bot

./: .gitignore  README.md  common.py  docker-compose.yml  find_telegram_channels.py  main.py  pyproject.toml  scripts.py  setup.cfg
alembic/: env.py
alembic/versions/: 0da2318334c3_add_resume_media.py  44db9a31daf9_improve_messages.py  4fe8075c926d_add_channels_and_messages.py  5bee9e3fe2ef_initial_revision.py  6324cbc20fd0_add_user_channel_relationship_table.py  82a2fcac4544_add_users_and_media.py  d3e449556763_add_user_channel_unique_constraint.py
config/: config.yaml.example  search_queries.txt
telegram/: client.py  common.py  connector.py  database.py  dialog.py  download.py  media.py  models.py  scripts.py  search.py  utils.py
telegram/downloader/: __init__.py  dialog.py  media.py
telegram/dump/: __init__.py  dialog.py  media.py
