[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Pedro Dias <pdcmpa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.24.0"
cryptg = "^0.2.post4"
Pillow = "^9.0.1"
aiohttp = "^3.8.1"
hachoir = "^3.1.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
