[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Pedro Dias <pdcmpa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.24.0"
cryptg = "^0.2.post4"
Pillow = "^9.0.1"
aiohttp = "^3.8.1"
hachoir = "^3.1.2"
PyYAML = "^6.0"
SQLAlchemy = {version = "^1.4.40", extras = ["mypy"]}
psycopg2-binary = "^2.9.3"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
alembic = "^1.8.1"
sqlalchemy2-stubs = "^0.0.2a27"
twarc = "^2.11.3"
isort = "^5.10.1"
twarc-csv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
